<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Cryptography"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtLabelFileName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="start|center"
        android:text="@string/file"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Title" />

    <TextView
        android:id="@+id/txtFileName"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="start|center"
        android:text="@string/load_file"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/txtLabelFileName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtLabelFileName"
        app:layout_constraintTop_toTopOf="@id/txtLabelFileName"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txtLabelAES"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aes"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtFileName" />

    <View
        android:id="@+id/horizontalDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtLabelAES" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnKeyAESCreator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/teal_700"
        android:padding="5dp"
        android:text="@string/create_a_key"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtLabelAES" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnKeyAESEncrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/teal_700"
        android:padding="5dp"
        android:text="@string/encrypt"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/btnKeyAESDecrypt"
        app:layout_constraintStart_toEndOf="@id/btnKeyAESCreator"
        app:layout_constraintTop_toBottomOf="@id/txtLabelAES" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnKeyAESDecrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/teal_700"
        android:padding="5dp"
        android:text="@string/decrypt"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnKeyAESEncrypt"
        app:layout_constraintTop_toBottomOf="@id/txtLabelAES" />

    <TextView
        android:id="@+id/txtLabelRSA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/rsa"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnKeyAESCreator" />

    <View
        android:id="@+id/horizontalRSADivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtLabelRSA" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnKeyRSACreator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/teal_700"
        android:padding="5dp"
        android:text="@string/create_a_key"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtLabelRSA" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnKeyRSAEncrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/teal_700"
        android:padding="5dp"
        android:text="@string/encrypt"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/btnKeyRSADecrypt"
        app:layout_constraintStart_toEndOf="@id/btnKeyRSACreator"
        app:layout_constraintTop_toBottomOf="@id/txtLabelRSA" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnKeyRSADecrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/teal_700"
        android:padding="5dp"
        android:text="@string/decrypt"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnKeyRSAEncrypt"
        app:layout_constraintTop_toBottomOf="@id/txtLabelRSA" />

    <TextView
        android:id="@+id/txtLabelDigitalSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/digital_sign"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnKeyRSACreator" />

    <View
        android:id="@+id/horizontalDigitalSignDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtLabelDigitalSign" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/teal_700"
        android:padding="5dp"
        android:text="@string/msg_sum"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtLabelDigitalSign" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDigitalSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/teal_700"
        android:padding="5dp"
        android:text="@string/sign"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/btnKeySignVerification"
        app:layout_constraintStart_toEndOf="@id/btnCalculate"
        app:layout_constraintTop_toBottomOf="@id/txtLabelDigitalSign" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnKeySignVerification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/teal_700"
        android:padding="5dp"
        android:text="@string/verification"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDigitalSign"
        app:layout_constraintTop_toBottomOf="@id/txtLabelDigitalSign" />


    <TextView
        android:id="@+id/txtPlainTextSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Selected plain text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnKeySignVerification" />

    <View
        android:id="@+id/horizontalPlainTextDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPlainTextSign" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalPlainTextDivider">

        <TextView
            android:id="@+id/txtFileContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/file_content"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtSecretAESKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/aes_key_s"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtEncryptedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/encrypted_text_s"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtDecryptedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/decrypted_text_s"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtPrivateRsaKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/rsa_private_key_s"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtPublicRsaKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/rsa_public_key_s"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtEncryptedRsaText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/encrypted_rsa_text_s"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtDecryptedRsaText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/decrypted_rsa_text_s"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtDigestiveSum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/digestive_text_s"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtDigitalSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/signature_text_s"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>